--- a/TypeEditor/v.02/ObjectEditor2/src/visualization/information/Information.mxml
+++ b/TypeEditor/v.02/ObjectEditor2/src/visualization/information/Information.mxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%">
+		 xmlns:mx="library://ns.adobe.com/flex/mx" width="100%" height="100%" 
+		 xmlns:OEComponents="OEComponents.*"
+		 show="group1_showHandler(event)">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 		<s:RadioButtonGroup id="group1"/>
@@ -10,10 +12,17 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayCollection;
+			import mx.events.CloseEvent;
+			import mx.events.FlexEvent;
+			import mx.managers.PopUpManager;
 			import mx.utils.UIDUtil;
 			
-			private var _data : XML;
+			import utils.Language;
 			
+			import visualization.languages.ChangeWord;
+			private var language:Language = Language.getInstance();
+			
+			private var _data : XML;
 			
 			[Bindable]
 			public var arInterfaceType:ArrayCollection = new ArrayCollection(
@@ -151,7 +160,6 @@
 				_data.OptimizationPriority = fOptimizationPriority.value;
 				_data.WCAG = fWCAG.text;
 				_data.Containers = fContainers.text;
-				_data.Languages = fLanguages.text;
 				_data.RemoteMethods = fRemoteMethods.text;
 				_data.Handlers = fHandlers.text;
 				_data.Moveable = getIntFromBoolean(fMoveable.selected);
@@ -168,6 +176,30 @@
 				return "0";
 			}
 				
+
+			protected function group1_showHandler(event:FlexEvent):void
+			{
+				// TO2DO Auto-generated method stub
+				fLanguages.text =  language.languagesList;
+			}
+			
+			private function changeDisplayName ():void
+			{
+				var popup:ChangeWord = ChangeWord(PopUpManager.createPopUp(this, ChangeWord, true));
+				popup.addEventListener(CloseEvent.CLOSE, closeHandler);
+				
+				function closeHandler(event:CloseEvent):void
+				{
+					var wordCode:String = event.target.wordCode;
+					
+					if(wordCode == "")return;
+					
+					fDisplayName.text = wordCode;
+					
+				}
+				
+				saveChanges();
+			}
 		]]>
 	</fx:Script>
 	
@@ -183,17 +215,17 @@
 			<s:TextInput id="fXMLScriptName" width="250" change="{saveChanges()}"/>
 		</mx:FormItem>
 			
-		<mx:FormItem label="DisplayName" enabled="false">
+		<mx:FormItem label="DisplayName" >
 			<s:HGroup>
-				<s:TextInput id="fDisplayName" width="213" editable="false"/>
-				<s:Button label="..." width="30"/>
+				<OEComponents:OETextInput id="fDisplayName" width="213" editable="false"/>
+				<s:Button label="..." width="30" click="changeDisplayName()"/>
 			</s:HGroup>
 		</mx:FormItem>
 		
 		
 		<mx:FormItem label="Description" toolTip="писание объекта и его использования" enabled="false">
 			<s:HGroup>
-				<s:TextInput id="fDescription" width="213" editable="false" />
+				<OEComponents:OETextInput id="fDescription" width="213" editable="false" />
 				<s:Button label="..." width="30"/>
 			</s:HGroup>
 		</mx:FormItem>
