--- a/IDE/v.02/_testProjects/TabNavigator/src/example_1.mxml
+++ b/IDE/v.02/_testProjects/TabNavigator/src/example_1.mxml
@@ -3,19 +3,45 @@
 					   xmlns:local="*"
 					   xmlns:mx="library://ns.adobe.com/flex/mx"
 					   xmlns:s="library://ns.adobe.com/flex/spark">
+
 	<fx:Script>
 		<![CDATA[
+			import mx.graphics.SolidColor;
+			
+			import spark.primitives.Rect;
+			
 			protected function button1_clickHandler(event:MouseEvent):void
 			{
-				TabNavigatorSkin( tn.skin ).hsb.changeValueByStep( true );
+				var tab : Tab = new Tab();
+				tab.label = "z_" + String( tn.tabBar.dataProvider ? tn.tabBar.dataProvider.length : 0 );
+				tn.addTab( tab );
+			}
+			
+			protected function button2_clickHandler(event:MouseEvent):void
+			{
+				var rect : Rect = new Rect();
+				rect.fill = new SolidColor(0);
+				rect.width = 500;
+				rect.height = 400;
+				tn.selectedTab.addElement( rect );
+
+				
+//				var btn : Button = new Button();
+//				btn.label = tn.selectedTab.label;
+//				tn.selectedTab.addElement( btn );
 			}
 		]]>
 	</fx:Script>
 
-	<local:TabNavigator id="tn" height="112" width="100%" x="13" y="14" skinClass="TabNavigatorSkin" />
-	<s:Button  x="10" y="128" click="button1_clickHandler(event)"/>
-	<s:TabBar x="79" y="279" width="399">
-		<s:ArrayCollection source="['Home', 'Rooms', 'Dining','Home', 'Rooms', 'Dining','Home', 'Rooms', 'Dining']"/>
-	</s:TabBar>
+	<local:TabNavigator id="tn"
+						width="351" x="13" y="14"
+						skinClass="skins.TabNavigatorSkin" height="170"/>
 	
+	<s:Label text="Selected tab: { tn.selectedTab.label }"  x="36" y="259"/>
+	
+	<s:Button x="36" y="209" label="Create New Tab" click="button1_clickHandler(event)"/>
+	
+	<s:Button x="165" y="209" label="Add Rect" click="button2_clickHandler(event)"/>
+	
+
 </s:WindowedApplication>
