--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/WorkArea.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/WorkArea.mxml
@@ -14,6 +14,7 @@
 			import mx.collections.ArrayCollection;
 			import mx.collections.Sort;
 			import mx.collections.SortField;
+			import mx.containers.TabNavigator;
 			import mx.controls.HTML;
 			import mx.controls.Text;
 			import mx.core.UIComponent;
@@ -29,6 +30,7 @@
 			import net.vdombox.ide.modules.wysiwyg.view.skins.WorkAreaSkin;
 			
 			import spark.components.Group;
+			import spark.layouts.supportClasses.LayoutBase;
 
 			[SkinPart( required="true" )]
 			public var transformMarker : TransformMarker;
@@ -84,7 +86,7 @@
 				}
 
 			}
-
+			
 			private function creationCompleteHandler() : void
 			{
 				addEventListener( ItemEvent.ITEM_CLICKED, item_itemClickedHandler, true, 0, true );
