--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/WorkAreaSkin.mxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
+<s:SparkSkin xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*"
+			 xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:mx="library://ns.adobe.com/flex/halo"
-			 xmlns:s="library://ns.adobe.com/flex/spark" xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*">
+			 xmlns:s="library://ns.adobe.com/flex/spark">
 
 
 	<s:states>
@@ -16,15 +17,15 @@
 	<s:Scroller focusEnabled="false"
 				bottom="0" left="0" right="0" top="0"
 				minViewportInset="1">
-		
+
 		<s:Group>
-			
-			<components:TransformMarker id="transformMarker" />
-			
+
+			<components:TransformMarker id="transformMarker"/>
+
 			<s:Group id="contentGroup"/>
-			
+
 		</s:Group>
-		
+
 	</s:Scroller>
 
 </s:SparkSkin>
