--- a/IDE/v.02/_testProjects/ScriptEditor/src/view/skins/ScriptEditorSkin.mxml
+++ b/IDE/v.02/_testProjects/ScriptEditor/src/view/skins/ScriptEditorSkin.mxml
@@ -3,27 +3,87 @@
 		xmlns:mx="library://ns.adobe.com/flex/mx"
 		xmlns:s="library://ns.adobe.com/flex/spark"
 		xmlns:view="view.*"
-		addedToStage="skin1_addedToStageHandler(event)" mouseDown="skin1_mouseDownHandler(event)" resize="skinnablecontainer1_resizeHandler(event)">
+		addedToStage="addedToStageHandler()">
 
 	<fx:Script>
 		<![CDATA[
+			import mx.binding.utils.BindingUtils;
+			import mx.binding.utils.ChangeWatcher;
 			import mx.events.ResizeEvent;
 
-			protected function skinnablecontainer1_resizeHandler( event : ResizeEvent ) : void
+			private var hcw : ChangeWatcher;
+			private var vcw : ChangeWatcher;
+			
+			private function updateSize() : void
 			{
-				scriptAreaComponent.paint( width - vsb.width, height - hsb.height );
+				scriptAreaComponent.width = width - vsb.width;
+				scriptAreaComponent.height = height - hsb.height;
 			}
-
-			protected function skin1_mouseDownHandler( event : MouseEvent ) : void
+			
+			private function updateScrollBar() : void
 			{
-				stage.focus = scriptAreaComponent;
+				vsb.maximum = scriptAreaComponent.maxScrollV;
+				vsb.value = scriptAreaComponent.scrollV;
+				
+				hsb.maximum = scriptAreaComponent.maxScrollH / 8;
+				hsb.value = scriptAreaComponent.scrollH / 8;
 			}
-
-			protected function skin1_addedToStageHandler( event : Event ) : void
+			
+			private function maxScrollChanged( value : Number ) : void
 			{
-				scriptAreaComponent.addEventListener( Event.SCROLL, scriptAreaComponent_scrollHandler );
-
 				updateScrollBar();
+			}
+			
+			private function addedToStageHandler() : void
+			{
+				addEventListener( Event.REMOVED_FROM_STAGE, removedFromStageHandler, false, 0, true );
+				addEventListener( Event.RESIZE, resizeHandler, false, 0, true );
+				addEventListener( MouseEvent.MOUSE_DOWN, mouseDownHandler, false, 0, true );
+				
+				if( scriptAreaComponent )
+				{
+					scriptAreaComponent.addEventListener( Event.SCROLL, scriptAreaComponent_scrollHandler );
+					hcw = BindingUtils.bindSetter( maxScrollChanged, scriptAreaComponent, "maxScrollH", true );
+					vcw = BindingUtils.bindSetter( maxScrollChanged, scriptAreaComponent, "maxScrollV", true );
+				}
+				
+				if( hsb )
+					hsb.addEventListener( Event.CHANGE, hsb_changeHandler, false, 0, true );
+				
+				if( vsb )
+					vsb.addEventListener( Event.CHANGE, vsb_changeHandler, false, 0, true );
+				
+				updateSize();
+				updateScrollBar();
+			}
+			
+			private function removedFromStageHandler( event : Event ) : void
+			{
+				removeEventListener( Event.REMOVED_FROM_STAGE, removedFromStageHandler );
+				removeEventListener( Event.RESIZE, resizeHandler );
+				removeEventListener( MouseEvent.MOUSE_DOWN, mouseDownHandler );
+				
+				if( scriptAreaComponent )
+					scriptAreaComponent.removeEventListener( Event.SCROLL, scriptAreaComponent_scrollHandler );
+				
+				if( hsb )
+					hsb.removeEventListener( Event.CHANGE, hsb_changeHandler);
+				
+				if( vsb )
+					vsb.removeEventListener( Event.CHANGE, vsb_changeHandler );
+			}
+			
+			private function resizeHandler( event : ResizeEvent ) : void
+			{
+				updateSize();
+				updateScrollBar();
+//				scriptAreaComponent.paint( width - vsb.width, height - hsb.height );
+			}
+
+			private function mouseDownHandler( event : MouseEvent ) : void
+			{
+				if ( stage )
+					stage.focus = scriptAreaComponent;
 			}
 
 			private function scriptAreaComponent_scrollHandler( event : Event ) : void
@@ -31,18 +91,14 @@
 				updateScrollBar();
 			}
 
-			private function updateScrollBar() : void
-			{
-				vsb.maximum = scriptAreaComponent.maxScrollV;
-				vsb.value = scriptAreaComponent.scrollV;
-
-				hsb.maximum = scriptAreaComponent.maxScrollH / 8;
-				hsb.value = scriptAreaComponent.scrollH / 8;
-			}
-
-			protected function hsb_changeHandler( event : Event ) : void
+			private function hsb_changeHandler( event : Event ) : void
 			{
 				scriptAreaComponent.scrollH = hsb.value * 8;
+			}
+
+			private function vsb_changeHandler( event : Event ) : void
+			{
+				scriptAreaComponent.scrollV = vsb.value;
 			}
 		]]>
 	</fx:Script>
@@ -54,7 +110,7 @@
 
 
 	<view:ScriptAreaComponent id="scriptAreaComponent"
-								text="asdka ;lda sld"/>
+							  text="asdka ;lda sld"/>
 
 	<s:HScrollBar id="hsb"
 				  minimum="0"
@@ -63,5 +119,6 @@
 
 	<s:VScrollBar id="vsb"
 				  minimum="1"
-				  bottom="{ hsb.height }" right="0" top="0"/>
+				  bottom="{ hsb.height }" right="0" top="0"
+				  change="vsb_changeHandler(event)"/>
 </s:Skin>
