git-svn-id: http://svn.vdombox.ru/flextools/trunk@6188 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/ImageToolbar.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/ImageToolbar.mxml
@@ -7,7 +7,7 @@
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.common.vo.AttributeVO;
-			import net.vdombox.ide.modules.wysiwyg.view.components.Item;
+			import net.vdombox.ide.modules.wysiwyg.view.components.ObjectRenderer;
 			import net.vdombox.ide.modules.wysiwyg.events.ToolbarEvent;
 
 			import mx.utils.StringUtil;
@@ -16,9 +16,9 @@
 
 			private var attributesObject : Object;
 
-			private var _item : Item;
+			private var _item : ObjectRenderer;
 
-			public function get item() : Item
+			public function get item() : ObjectRenderer
 			{
 				return _item;
 			}
@@ -39,7 +39,7 @@
 				return result;
 			}
 			
-			public function init( item : Item ) : void
+			public function init( item : ObjectRenderer ) : void
 			{
 				_item = item;
 
@@ -62,7 +62,7 @@
 
 			}
 
-			private function extractAttributes( item : Item ) : Object
+			private function extractAttributes( item : ObjectRenderer ) : Object
 			{
 				var editableAttributeVO : AttributeVO;
 				var attributeVO : AttributeVO;
