git-svn-id: http://svn.vdombox.ru/flextools/trunk@6189 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/ide/common/skins/TabBarButtonSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/skins/TabBarButtonSkin.mxml
@@ -6,7 +6,7 @@
 
 	<!-- host component -->
 	<fx:Metadata>
-		[HostComponent("net.vdombox.ide.common.components.tabNavigatorClasses.TabBarButton")]
+		[HostComponent("net.vdombox.components.tabNavigatorClasses.TabBarButton")]
 	</fx:Metadata>
 
 	<fx:Script>
