--- a/IDE/v.02/common/src/net/vdombox/ide/common/skins/TabBarSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/skins/TabBarSkin.mxml
@@ -3,7 +3,7 @@
 		xmlns:fx="http://ns.adobe.com/mxml/2009"
 		xmlns:local="*"
 		xmlns:s="library://ns.adobe.com/flex/spark"
-		alpha.disabled="0.5" xmlns:tabNavigatorClasses="net.vdombox.ide.common.components.tabNavigatorClasses.*">
+		alpha.disabled="0.5" xmlns:tabNavigatorClasses="net.vdombox.components.tabNavigatorClasses.*">
 
 	<fx:Metadata>
 		<![CDATA[ 
