--- a/IDE/v.02/common/src/net/vdombox/ide/common/skins/TabNavigatorSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/skins/TabNavigatorSkin.mxml
@@ -2,7 +2,7 @@
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:mx="library://ns.adobe.com/flex/mx"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 xmlns:tabNavigatorClasses="net.vdombox.ide.common.components.tabNavigatorClasses.*"
+			 xmlns:tabNavigatorClasses="net.vdombox.components.tabNavigatorClasses.*"
 			 creationComplete="creationCompleteHandler()">
 	<fx:Script>
 		<![CDATA[
