git-svn-id: http://svn.vdombox.ru/flextools/trunk@6209 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ObjectEditorSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ObjectEditorSkin.mxml
@@ -55,7 +55,7 @@
 									  highlighted.xml="true" highlighted.wysiwyg="false"/>
 	</s:HGroup>
 
-	<components:PageRenderer id="pageRenderer"
+	<components:PageRenderer id="renderer"
 							 height="100%" width="100%"
 							 top="20"
 							 includeIn="wysiwyg, wysiwygDisabled"/>
