git-svn-id: http://svn.vdombox.ru/flextools/trunk@6211 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ObjectEditorSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ObjectEditorSkin.mxml
@@ -23,8 +23,10 @@
 	<s:states>
 		<s:State name="wysiwyg"/>
 		<s:State name="wysiwygDisabled" stateGroups="disabled"/>
+		<s:State name="wysiwygWait" stateGroups="wait"/>
 		<s:State name="xml"/>
 		<s:State name="xmlDisabled" stateGroups="disabled"/>
+		<s:State name="xmlWait" stateGroups="wait"/>
 	</s:states>
 
 	<s:Rect height="20"
