git-svn-id: http://svn.vdombox.ru/flextools/trunk@6214 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/skins/TabBarButtonSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/skins/TabBarButtonSkin.mxml
@@ -63,6 +63,6 @@
 			 maxDisplayedLines="1"/>
 
 	<s:Button id="closeButton"
-			  right="2" skinClass="net.vdombox.ide.common.skins.CloseButtonSkin" verticalCenter="1"/>
+			  right="2" skinClass="net.vdombox.skins.CloseButtonSkin" verticalCenter="1"/>
 
 </s:SparkSkin>
