--- a/IDE/v.02/common/src/net/vdombox/editors/PopUpMenu.mxml
+++ b/IDE/v.02/common/src/net/vdombox/editors/PopUpMenu.mxml
@@ -1,42 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:List xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		xmlns:s="library://ns.adobe.com/flex/spark" 
-		xmlns:mx="library://ns.adobe.com/flex/mx" requireSelection="true" height="50">
-	
-	<s:ArrayList source="[1,2,3,4,5,6,7,8]"/>
-	
+<s:List xmlns:fx="http://ns.adobe.com/mxml/2009"
+		xmlns:mx="library://ns.adobe.com/flex/mx"
+		xmlns:s="library://ns.adobe.com/flex/spark"
+		maxHeight="300"
+		requireSelection="true">
+
 	<fx:Script>
 		<![CDATA[
+			import mx.collections.ArrayList;
 			import mx.managers.PopUpManager;
+
 			public function setListData( value : Array ) : void
 			{
-				
+				dataProvider = new ArrayList( value );
 			}
-			
+
 			public function setSelectedIndex( index : int ) : void
 			{
-				
+				selectedIndex = index;
 			}
-			
+
 			public function getSelectedValue() : String
 			{
-				return "";
+				return selectedItem;
 			}
+
 			public function show( owner : DisplayObjectContainer, x : int, y : int ) : void
 			{
 //				this.owner = owner;
 //				updateSize();
 				this.x = x;
 				this.y = y;
-				PopUpManager.addPopUp( this, owner );
+				PopUpManager.addPopUp( this, owner.parent );
 //				(getUI() as PopupUI).resetIndex();
 			}
-			
-			public function dispose():void
+
+			public function dispose() : void
 			{
 				PopUpManager.removePopUp( this );
 			}
 		]]>
 	</fx:Script>
-	
+
 </s:List>
