git-svn-id: http://svn.vdombox.ru/flextools/trunk@6221 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/editors/PopUpMenu.mxml
+++ b/IDE/v.02/common/src/net/vdombox/editors/PopUpMenu.mxml
@@ -12,6 +12,7 @@
 
 			public function setListData( value : Array ) : void
 			{
+				value.sortOn( "label", Array.CASEINSENSITIVE );
 				dataProvider = new ArrayList( value );
 			}
 
@@ -22,7 +23,7 @@
 
 			public function getSelectedValue() : String
 			{
-				return selectedItem;
+				return selectedItem.value;
 			}
 
 			public function show( owner : DisplayObjectContainer, x : int, y : int ) : void
